correction overflow

--- a/curtains.css
+++ b/curtains.css
@@ -20,7 +20,7 @@ body {
     font-family: "Obrazec";
     line-height: 1.2;
     color: #ffffff;
-    font-size: 2vw;
+    /* font-size: 2vw; */
 
     overflow-x: hidden !important;
     max-width: 100% !important;
@@ -61,7 +61,7 @@ body {
 
 #content h1 {
     text-align: center;
-    font-size: 8em;
+    font-size: 4em;
     text-transform: uppercase;
     /* font-family: "Obrazec";  */
     /* font-family: "Doppelganger"; */
@@ -80,7 +80,7 @@ body {
 #content h2 {
     /* width: 50%;
     margin: 15vh 0 15vh 50%; */
-    font-size: 15em;
+    font-size: 6em;
     text-transform: uppercase;
     /* font-family: "Doppelganger"; */
     font-family: "Bigilla";
@@ -93,7 +93,7 @@ body {
 }
 
 #content nav{
-    font-size: 3em;
+    font-size: 1.5em;
     margin-bottom: 10px;
 }
 #content ul{
@@ -102,14 +102,14 @@ body {
 
 .paragraphe-bio{
     font-family: 'Nanum Gothic', sans-serif;
-    font-size: 3.2em;
+    font-size: 1.5em;
     /* width: 300px; */
     justify-content: space-between;
     margin-top: -50px;
 }
 .paragraphe-work{
     font-family: 'Nanum Gothic', sans-serif;
-    font-size: 3.2em;
+    font-size: 1.5em;
     /* width: 300px; */
     justify-content: space-between;
     margin-top: -50px;
